[package]
name = "void-rs"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6.0"
wgpu_glyph = "0.10.0"
rodio = "0.13.0"
winit = "0.23.0"
shaderc = "0.7.0"
image = "0.23.11"
bytemuck = "1.4.1"
futures = "0.3.4"