[package]
name = "ir-parser"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir = { path = "../ir" }
roxmltree = "0.14.0"
serde = "1.0"
bincode = "1.3.1"